# kv-storage

./: Cargo.toml  README.md
.cargo/: config.toml
crates/rkyv/: Cargo.toml  impl.rs
crates/serde/: Cargo.toml  impl.rs
lib/: kv-storage.rs  lib.rs
lib/repo/cosmwasm/: Cargo.toml  cosmwasm.rs
lib/repo/memory/: Cargo.toml  memory.rs
lib/serde/bincode/: Cargo.toml  bincode.rs
lib/serde/bincode/no-custom/: Cargo.toml  readme.md
lib/serde/bincode/no-custom/src/: error.rs  lib.rs
src/: lib.rs
test/: Cargo.toml  it.rs
test/mock/: Cargo.toml  consumer.rs
