[package]
name = "it"
version = "0.0.0"
edition = "2021"

[lib]
path = "it.rs"
doctest = false

[dependencies]
thiserror.workspace = true
serde.workspace = true

mock-consumer = { path = "mock" }
kv-storage = { path = ".." }
kv-storage-bincode = { path = "../lib/serde/bincode" }
kv-storage-memory = { path = "../lib/repo/memory" }
