[package]
name = "kv-storage-bincode"
version = "0.1.0"
edition = "2021"

[features]
default = [ "bincode-no-custom" ]
bincode-std = [ "dep:bincode" ]
bincode-no-custom = [ "dep:bincode-no-custom" ]

[lib]
path = "bincode.rs"
test = false
doctest = false

[dependencies]
serde.workspace = true
kv-storage.workspace = true

bincode = { version = "1.3", optional = true }
bincode-no-custom = { path = "no-custom", optional = true }
