[package]
name = "bincode-no-custom"
version = "1.3.3" # remember to update html_root_url
authors = ["Ty Overby <ty@pre-alpha.com>", "Francesco Mazzoli <f@mazzo.li>", "David Tolnay <dtolnay@gmail.com>", "Zoey Riordan <zoey@dos.cafe>"]
license = "MIT"

[dependencies]
serde = "1.0.63"

[dev-dependencies]
serde_bytes = "0.11"
serde_derive = "1.0.27"

[features]
# This feature is no longer used and is DEPRECATED. This crate relies on the
# serde `serde_if_integer128` macro to enable i128 support for Rust compilers
# and targets that support it. The feature will be removed if and when a new
# major version is released.
i128 = []
